translate some text into uzbek

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,8 +5,8 @@
 		<div class="measure-narrow center mb4">
 
 			<img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
-			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
-			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
+			<p class="f3 lh-title light-gray b tc mb2">Yangiliklarga obuna bo'lish</p>
+			<p>Bizning yangi mahsulotlarimizdan xabardor bo'lish uchun obuna bo'ling.</p>
 
 			{{ partial "newsletter-form" . }}
 
@@ -15,26 +15,26 @@
 		<div class="flex-ns justify-between">
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
+				<h3 class="f4 b lh-title mb1 primary">Magic Juice</h3>
 				<ul class="mb3">
-					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Our products</a></li>
-					<li><a href="/values" class="link">About</a></li>
-					<li><a href="/post" class="link">Blog</a></li>
-					<li><a href="/contact" class="link">Contact</a></li>
+					<li><a href="/" class="link">Bosh sahifa</a></li>
+					<li><a href="/products" class="link">Mahsulotlarimiz</a></li>
+					<li><a href="/values" class="link">Biz haqimizda</a></li>
+					<li><a href="/post" class="link">Yangiliklar</a></li>
+					<li><a href="/contact" class="link">Aloqa</a></li>
 				</ul>
 			</div>
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
+				<h3 class="f4 b lh-title mb1 primary">Batafsil ma`lumot oling</h3>
 				<ul class="mb3">
-					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
+					<li><a href="/post/jamaica-blue/" class="link">Aksiyalar</a></li>
+					<li><a href="/contact" class="link">Uchrashuvga yozilish</a></li>
 				</ul>
 			</div>
 
 			<div>
-				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
+				<h3 class="f4 b lh-title mb2 primary">Ijtimoiy tarmoqlarimiz</h3>
 				<ul class="mhn2">
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
