--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
+			<img src="/img/logo2.png" alt="Kaldi logo" class="db w4 center mb4 br0">
 			<p class="f3 lh-title light-gray b tc mb2">Yangiliklarga obuna bo'lish</p>
 			<p>Bizning yangi mahsulotlarimizdan xabardor bo'lish uchun obuna bo'ling.</p>
 
