--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,9 +7,9 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
+		<li><a href="/products" class="pa3 no-underline db">Mahsulot</a></li>
 
-		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
+		<li><a href="/contact" class="pa3 no-underline db">Aloqa</a></li>
 	</ul>
 
 </nav>
