--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -1,33 +1,33 @@
 <!-- Contact -->
 <div class="mb4">
-  <h4 class="f3 b lh-title mb3 tc">Drop us a line below</h4>
+  <h4 class="f3 b lh-title mb3 tc">Bizga xabar jo`nating</h4>
 
   <form action="">
     <div class="flex-l mhn1-l">
       <!-- Name -->
       <div class="ph1-l w-50-l">
         <fieldset>
-          <input type="text" id="name" name="name" placeholder="Name" class="w-100 mb2">
-          <label for="name">Name</label>
+          <input type="text" id="name" name="name" placeholder="Ismingiz" class="w-100 mb2">
+          <label for="name">Ismingiz</label>
         </fieldset>
       </div>
       <!-- Email -->
       <div class="ph1-l w-50-l">
         <fieldset>
-          <input type="email" id="email" name="email" placeholder="Email" class="w-100 mb2">
-          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Pochtangiz" class="w-100 mb2">
+          <label for="email">Pochtangiz</label>
         </fieldset>
       </div>
     </div>
 
     <!-- Message -->
     <fieldset>
-      <textarea id="message" name="message" placeholder="Your message" rows="8" cols="80" class="w-100"></textarea>
-      <label for="message">Your message</label>
+      <textarea id="message" name="message" placeholder="Xabaringiz" rows="8" cols="80" class="w-100"></textarea>
+      <label for="message">Xabaringiz</label>
     </fieldset>
     <!-- Button -->
     <div class="tc">
-      <button type="submit" class="btn w-100 w-auto-ns raise">Submit</button>
+      <button type="submit" class="btn w-100 w-auto-ns raise">Yuborish</button>
     </div>
   </form>
 </div>
