fix product grid

--- a/site/layouts/partials/image-grid.html
+++ b/site/layouts/partials/image-grid.html
@@ -3,7 +3,7 @@
 	<div class="flex flex-wrap mhn1">
 
 		<div class="w-100 ph1-ns">
-			<img src="{{ .image3.image }}" alt="{{ .image3.alt }}">
+			<img src="/img/products-grid3.png" alt="Magic Juice">
 		</div>
 	</div>
 
